# travel-scraper

./: Cargo.toml  Makefile  output.txt  rust_interface  rust_interface.c
src/: lib.rs  main.rs
src/extract_options/: mod.rs
src/interface_c/: city.rs  free.rs  hostel.rs  listcstring.rs  mod.rs  room.rs
src/make_request/: a_and_o.rs  hashmaps_cities.rs  hostelsclub.rs  mod.rs
src/structs/: mod.rs  money.rs  rooms.rs
src/tests/: tests.rs
src/ui/: mod.rs
teste/: Makefile
