[package]
name = "travel_scraper"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.12.18", features = ["gzip", "deflate", "brotli", "zstd"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
url = "2.5.4"
crossbeam = "0.8.4"
